--- a/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
+++ b/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
@@ -10,4 +10,6 @@
 
 样本点是抽样(Sample)的最基本单元，认识随机现象首先要列出它的样本空间。
 
-> 随机现象的一切可能基本结果组成的集合称为样本空间(Sample space)，记为 $${\mit\Omega}=\{\omega\}$$，其中 $$\omega$$ 表示基本结果，称为样本点(Sample point)。
+$$
+\text{随机现象的一切可能基本结果组成的集合称为样本空间(Sample space)，记为} {\mit\Omega}=\{\omega\}\text{，其中} \omega \text{表示基本结果，称为样本点(Sample point)。}
+$$
