--- a/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
+++ b/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
@@ -8,11 +8,11 @@ modify_date: 2024-10-05 18:18:00
 ---
 概率论与数理统计研究的对象是随机现象．概率论是研究随机现象的模型(即概率分布)，数理统计是研究随机现象的数据收集与处理。
 
+<!--more-->
+
 在一定的条件下，并不总是出现相同结果的现象称为**随机现象**(Random phenomenon)；只存在一个结果的现象称为**确定性现象**(Deterministic phenomenon)；对在相同的条件下，以重复的随机现象的观察、记录和实验的研究称为**随机试验**(Random trial)。慨率论与数理统计主要研究能大量重复的随机现象和随机试验，但也十分注意研究不能重复的随机现象。
 
 概率(Probability)是随机现象的**不确定性**的一种度量，概率模型就是对随机现象的数学描述。
-
-<!--more-->
 
 ## 随机事件与概率
 
@@ -20,9 +20,64 @@ modify_date: 2024-10-05 18:18:00
 
 样本点是抽样(Sample)的最基本单元，认识随机现象首先要列出它的样本空间。
 
-随机现象的一切可能基本结果组成的集合称为样本空间(Sample space)，记为 ${\mit\Omega}=\\{\omega\\}$，其中 $\omega$ 表示基本结果，称为样本点(Sample point)。
+<div class="definition-box">
+  <div class="definition-title">
+      样本空间和样本点
+  </div>
+  <div class="definition-content">
+    随机现象的一切可能基本结果组成的集合称为样本空间(Sample space)，记为 ${\mit\Omega}=\lbrace\omega\rbrace$，其中 $\omega$ 表示基本结果，称为样本点(Sample point)。
+  </div>
+</div>
+
+将样本点的个数为有限个或可列的情况归为一类，称为**离散样本空间**(Discrete sample space)；而将样本点的个数为不可列无限个的情况归为另一类，称为**连续样本空间**(Continuous sample space)。
+
+在研究英文字母的使用情况时，则可能出现的结果为 $A,B,\cdots,Z$和空格“$\lfloor\;\rceil$”，将样本空间选定为 ${\mit\Omega}=\lbrace\text{空格}, A,B,\cdots,Z\rbrace$ 是合适的，它是一个离散的样本空间；
+
+考察一晶体管的寿命，用变量 $t$ 来表示晶体管开始工作到首次发生故障的时间，那么“晶体管寿命”的样本空间就是所有的非负实数 ${\mit\Omega}=\lbracet\mid t\geqslant0\rbrace$，它是一个连续的样本空间。
+
+在确定样本空间的时候，不同的试验结果必须是**相互排斥的**，即在试验过程中只能产生**唯一**的一个结果。需要注意的是随机现象的样本空间要包含**至少两个样本点**，若将确定性现象也一并考虑，那么仅含有一个样本点的样本空间对应的确定性现象。
+
+<div class="definition-box">
+    <div class="definition-title">
+        随机事件
+    </div>
+    <div class="definition-content">
+        样本空间的一个子集称作随机事件，简称事件(Event)，通常用大写的英文字母 $A,B,C,\cdots$ 表示。
+    </div>
+</div>
+
+例如掷骰子所出现点数的样本空间为 ${\mit\Omega}=\lbrace1,2,3,4,5,6\rbrace$，可以定义集合 $\lbrace1,3,5\rbrace$ 为事件“掷到奇数点”，定义集合 $\lbrace4,5,6\rbrace$ 为事件“掷到的点数大于3”……
+
+当子集 $A$ 中某个样本点出现了，就说事件 $A$ 发生了，或者说：
+
+<div class="proposition-box">
+    <div class="proposition-title">
+        命题1
+    </div>
+    <div class="proposition-content">
+        事件 $A$ 发生当且仅当 $A$ 中某个样本点出现了。
+    </div>
+</div>
+
+由样本空间 $\mit\Omega$ 中的**单个元素**组成的子集称为**基本事件**(Elementary event)，而样本空间 $\mit\Omega$ 的最大子集(即 $\mit\Omega$ 本身)称为**必然事件**(Certain event)，样本空间 $\mit\Omega$ 的最小子集(即空集 $\varnothing$)称为**不可能事件**(Impossible event)。
+
+![样本空间](/assets/images/picture/event_and_probabity/sample_space.png)
 
 ### 联合样本空间
+
+同一个随机现象，由于研究的“侧重点”不同，通常会定义不同的样本空间，这些“侧重点”就是我们研究随机现象所包含的**指标**(Indicator)、**维度**(Dimension)或者**因子**(Factor)，**不同维度(指标或者因子)本质上描述还是同一个随机现象**。
+
+比如要研究“某城市的交通事故”，如果研究的侧重点在于“交通事故的严重程度”，那么样本空间就为 ${\mit\Omega}_1=\lbrace\text{轻微碰撞},\text{重度碰撞},\text{严重碰撞}\rbrace$；如果研究的侧重点在于“一年中发生交通事故的次数”，那么样本空间就为 ${\mit\Omega}_2=\lbrace0,1,2,\cdots\rbrace$；比如研究的侧重点在于“交通事故发生的时间段”，那么样本空间就为 ${\mit\Omega}_3=\lbrace\text{凌晨},\text{早高峰},\text{中午},\text{晚高峰},\text{夜间}\rbrace$……**但是一旦明确了研究的“侧重点”(维度)，则样本空间就被确定下来，此时样本空间是唯一且固定的**。这意味着不能在同一个维度中使用多个样本空间，否则会导致分析上的混乱。
+
+当然，也可以基于不同的研究维度所定义的样本空间，构建**联合样本空间**，或者称为**重构样本空间**，即将一个较大的、复杂的样本空间细化为更详细的子集来捕捉更具体的信息。比如要同时研究交通事故的严重程度和时间段，此时的样本空间则为：
+
+$$
+    {\mit\Omega}={\mit\Omega}_1\times{\mit\Omega}_3=\lbrace(\text{轻微碰撞},\text{凌晨}),(\text{严重碰撞},\text{早高峰}),\cdots\rbrace
+$$
+
+其中每个样本点是一个**二元组**，包含了交通事故的严重程度和时间段；${\mit\Omega}_1\times{\mit\Omega}_3$ 为两个集合的**Descartes集**。
+
+重构样本空间是对样本空间的不同层次的描述，但这并没有改变样本空间的唯一性，只是对它进行了更细致的表述，以适应不同的分析需要。选择样本空间时，重要的是要确保它**包含所有可能的结果**。同一个随机现象，不同样本空间的选择往往意味着对问题的不同维度的不同描述。一旦确定了样本空间，所有事件和概率计算必须基于该样本空间进行，不能在同一维度中混用多个样本空间来描述同一个随机现象。
 
 ### 事件间的关系与运算
 
