--- a/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
+++ b/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
@@ -85,6 +85,34 @@ $$
 
 ### 事件间的关系与运算
 
+下面的讨论总是假设事件 $A$ 与 $B$ 在**同一个样本空间** ${\mit\Omega}$ 中进行(即同一个随机现象)，一般使用Venn图来表示事件间的关系与运算。事件间的关系与集合间的关系一样，主要有以下几种：
+
+1. 包含关系：如果属于 $A$ 的样本点必属于 $B$，则称 $A$ 被包含在 $B$ 中，或称 $B$ 包含 $A$，记为 $A\subset B$，或 $B\supset A$。用概率论的语言说：事件 $A$ 发生必然导致事件 $B$ 发生。对于任一事件 $A$，必有 $\boldsymbol{\varnothing\subset A\subset{\mit\Omega}}$；
+2. 相等关系：如果事件 $A$ 与事件 $B$ 满足：属于 $A$ 的样本点必属于 $B$，而且属于 $B$ 的样本点必属于 $A$，即 $\boldsymbol{A\subset B}$ **且** $\boldsymbol{B\supset A}$，则称事件 $A$ 与 $B$ 相等，记为 $A=B$。从集合论观点看，两个事件相等就意味着这两事件是**同一个集合**；
+3. 互不相容关系：如果 $A$ 与 $B$ **没有相同的样本点**，则称 $A$ 与 $B$ 互不相容。用概率论的语言说：$A$ 与 $B$ 互不相容就是**事件**$\boldsymbol{A}$ **与事件** $\boldsymbol{B}$ **不可能同时发生**。
+
+事件的运算与集合的运算相当，有并、交、差和余四种运算。
+
+1. 事件 $A$ 与 $B$ 的差：记为 $A-B$，也可以记作 $A\bar{B}$。其含义为“由在事件 $A$ 中而不在 $B$ 中的样本点组成的新事件”，或用概率论的语言说“事件 $A$ 发生而 $B$ 不发生；
+2. 事件 $A$ 与 $B$ 的并：记为 $A\cup B$，也可以记作 $A+B$。其含义为“由事件 $A$ 与 $B$ 中所有的样本点(相同的只计一次)组成的新事件”，或用概率论的语言说“事件 $A$ 与 $B$ 中**至少有一个发生**”；
+3. 事件 $A$ 与 $B$ 的交：记为 $A\cap B$，或简记为 $AB$。其含义为“由事件 $A$ 与 $B$ 中公共的样本点组成的新事件”，或用概率论的语言说“事件 $A$ 与 $B$ **同时发生**”；
+4. 对立事件(余集)：将事件 $A$ 的对立事件记为 $\bar{A}$，即“由在 $\mit\Omega$ 中而不在 $A$ 中的样本点组成的新事件”，或用概率论的语言说“$A$ 不发生”，即 $\bar{A}={\mit\Omega}-A$。
+
+注意，对立事件是相互的，即 $A$ 的对立事件是 $\bar{A}$，而 $\bar{A}$ 的对立事件是 $A$，即 $\bar{\bar{A}}=A$。**必然事件** ${\mit\Omega}$ **与不可能事件** $\boldsymbol{\varnothing}$ **互为对立事件**，即 $\bar{{\mit\Omega}}=\varnothing$，$\bar{\varnothing}={\mit\Omega}$。
+
+<div class="proposition-box">
+    <div class="proposition-title">
+        命题2
+    </div>
+    <div class="proposition-content">
+        $A$ 与 $B$ 互为对立事件的充分必要条件是：$A\cap B=\varnothing$，并且 $A\cup B={\mit\Omega}$。
+    </div>
+</div>
+
+命题2也可作为对立事件的另一种定义，即如果事件 $A$ 与 $B$ 满足：$A\cap B=\varnothing$，且 $A\cup B={\mit\Omega}$，则称 $A$ 与 $B$ 互为对立事件，记为 $\bar{A}=B$，$\bar{B}=A$。
+
+特别要指出的是，对立事件一定是互不相容事件，即 $A\cap\bar{A}=\varnothing$，但是互不相容事件不一定是对立事件。
+
 ### 事件运算的性质
 
 ### 概率的公理化
