--- a/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
+++ b/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
@@ -28,15 +28,15 @@ modify_date: '2024-10-05 18:18:00 +0000'
       样本空间和样本点
   </div>
   <div class="definition-content">
-    随机现象的一切可能基本结果组成的集合称为样本空间(Sample space)，记为 ${\mit\Omega}=\lbrace\omega\rbrace$，其中 $\omega$ 表示基本结果，称为样本点(Sample point)。
+    随机现象的一切可能基本结果组成的集合称为样本空间(Sample space)，记为 ${\mit\Omega}=\\{\omega\\}$，其中 $\omega$ 表示基本结果，称为样本点(Sample point)。
   </div>
 </div>
 
 将样本点的个数为有限个或可列的情况归为一类，称为**离散样本空间**(Discrete sample space)；而将样本点的个数为不可列无限个的情况归为另一类，称为**连续样本空间**(Continuous sample space)。
 
-在研究英文字母的使用情况时，则可能出现的结果为 $A,B,\cdots,Z$和空格“$\lfloor\;\rceil$”，将样本空间选定为 ${\mit\Omega}=\lbrace\text{空格}, A,B,\cdots,Z\rbrace$ 是合适的，它是一个离散的样本空间；
+**例1**  在研究英文字母的使用情况时，则可能出现的结果为 $A,B,\cdots,Z$和空格“$\lfloor\;\rceil$”，将样本空间选定为 ${\mit\Omega}=\\{\text{空格}, A,B,\cdots,Z\\}$ 是合适的，它是一个离散的样本空间；
 
-考察一晶体管的寿命，用变量 $t$ 来表示晶体管开始工作到首次发生故障的时间，那么“晶体管寿命”的样本空间就是所有的非负实数 ${\mit\Omega}=\lbrace t\mid t\geqslant0\rbrace$，它是一个连续的样本空间。
+**例2**  考察一晶体管的寿命，用变量 $t$ 来表示晶体管开始工作到首次发生故障的时间，那么“晶体管寿命”的样本空间就是所有的非负实数 ${\mit\Omega}=\\{ t\mid t\geqslant0\\}$，它是一个连续的样本空间。
 
 在确定样本空间的时候，不同的试验结果必须是**相互排斥的**，即在试验过程中只能产生**唯一**的一个结果。需要注意的是随机现象的样本空间要包含**至少两个样本点**，若将确定性现象也一并考虑，那么仅含有一个样本点的样本空间对应的确定性现象。
 
@@ -49,7 +49,7 @@ modify_date: '2024-10-05 18:18:00 +0000'
     </div>
 </div>
 
-例如掷骰子所出现点数的样本空间为 ${\mit\Omega}=\lbrace1,2,3,4,5,6\rbrace$，可以定义集合 $\lbrace1,3,5\rbrace$ 为事件“掷到奇数点”，定义集合 $\lbrace4,5,6\rbrace$ 为事件“掷到的点数大于3”……
+例如掷骰子所出现点数的样本空间为 ${\mit\Omega}=\\{1,2,3,4,5,6\\}$，可以定义集合 $\\{1,3,5\\}$ 为事件“掷到奇数点”，定义集合 $\\{4,5,6\\}$ 为事件“掷到的点数大于3”……
 
 当子集 $A$ 中某个样本点出现了，就说事件 $A$ 发生了，或者说：
 
@@ -70,13 +70,13 @@ modify_date: '2024-10-05 18:18:00 +0000'
 
 同一个随机现象，由于研究的“侧重点”不同，通常会定义不同的样本空间，这些“侧重点”就是我们研究随机现象所包含的**指标**(Indicator)、**维度**(Dimension)或者**因子**(Factor)，**不同维度(指标或者因子)本质上描述还是同一个随机现象**。
 
-比如要研究“某城市的交通事故”，如果研究的侧重点在于“交通事故的严重程度”，那么样本空间就为 ${\mit\Omega}_1=\lbrace\text{轻微碰撞},\text{重度碰撞},\text{严重碰撞}\rbrace$；如果研究的侧重点在于“一年中发生交通事故的次数”，那么样本空间就为 ${\mit\Omega}_2=\lbrace0,1,2,\cdots\rbrace$；比如研究的侧重点在于“交通事故发生的时间段”，那么样本空间就为 ${\mit\Omega}_3=\lbrace\text{凌晨},\text{早高峰},\text{中午},\text{晚高峰},\text{夜间}\rbrace$……**但是一旦明确了研究的“侧重点”(维度)，则样本空间就被确定下来，此时样本空间是唯一且固定的**。这意味着不能在同一个维度中使用多个样本空间，否则会导致分析上的混乱。
+比如要研究“某城市的交通事故”，如果研究的侧重点在于“交通事故的严重程度”，那么样本空间就为 ${\mit\Omega}_1=\\{\text{轻微碰撞},\text{重度碰撞},\text{严重碰撞}\\}$；如果研究的侧重点在于“一年中发生交通事故的次数”，那么样本空间就为 ${\mit\Omega}_2=\\{0,1,2,\cdots\\}$；比如研究的侧重点在于“交通事故发生的时间段”，那么样本空间就为 ${\mit\Omega}_3=\\{\text{凌晨},\text{早高峰},\text{中午},\text{晚高峰},\text{夜间}\\}$……**但是一旦明确了研究的“侧重点”(维度)，则样本空间就被确定下来，此时样本空间是唯一且固定的**。这意味着不能在同一个维度中使用多个样本空间，否则会导致分析上的混乱。
 
 当然，也可以基于不同的研究维度所定义的样本空间，构建**联合样本空间**，或者称为**重构样本空间**，即将一个较大的、复杂的样本空间细化为更详细的子集来捕捉更具体的信息。比如要同时研究交通事故的严重程度和时间段，此时的样本空间则为：
 
 $$
 \nonumber
-    {\mit\Omega}={\mit\Omega}_1\times{\mit\Omega}_3=\lbrace(\text{轻微碰撞},\text{凌晨}),(\text{严重碰撞},\text{早高峰}),\cdots\rbrace
+    {\mit\Omega}={\mit\Omega}_1\times{\mit\Omega}_3=\{(\text{轻微碰撞},\text{凌晨}),(\text{严重碰撞},\text{早高峰}),\cdots\}
 $$
 
 其中每个样本点是一个**二元组**，包含了交通事故的严重程度和时间段；${\mit\Omega}_1\times{\mit\Omega}_3$ 为两个集合的**Descartes集**。
@@ -115,17 +115,193 @@ $$
 
 ### 事件运算的性质
 
+1. 交换律：
+$$
+A\cup B=B\cup A, \quad AB=BA
+$$
+
+2. 结合律：
+$$
+A\cup(B\cup C)=(A\cup B)\cup C, \quad A(BC)=(AB)C
+$$
+
+3. 分配律：
+$$
+(A\cup B)\cap C=AC \cup BC, \quad (A\cap B)\cup C=(A\cup C)\cap(B\cup C)
+$$
+
+4. De Morgan公式：
+$$
+\overline{A\cup B}=\bar{A} \cap \bar{B},\quad \overline{A\cap B}=\bar{A} \cup \bar{B}
+$$
+
+De Morgan公式可推广至 $n$ 个事件以及可列个事件的情况：
+
+$$
+\overline{\bigcup_{i=1}^{n}A_i}=\bigcap_{i=1}^{n}\bar{A}_i,\quad \overline{\bigcap_{i=1}^{n}A_i}=\bigcup_{i=1}^{n}\bar{A}_i
+$$
+
+$$
+\overline{\bigcup_{i=1}^{\infty}A_i}=\bigcap_{i=1}^{\infty}\bar{A}_i,\quad \overline{\bigcap_{i=1}^{\infty}A_i}=\bigcup_{i=1}^{\infty}\bar{A}_i
+$$
+
 ### 概率的公理化
+
+概率的**公理化定义**(Axiomatic definition of probability)是概率论发展的一个重要里程碑，它奠定了**现代概率论**的基础，彻底改变了过去基于经验和直觉的概率观念。
+
+18世纪早期，Jacob Bernoulli在古典概率论中，将概率定义为
+
+$$
+P(A)=\frac{\text{有利结果数}}{\text{总结果数}}
+$$
+
+尽管这一定义在简单场景中有效，但它依赖于**等可能性**的假设，在更多复杂场景下无法推广。这一时期的概率论主要围绕着**有限样本空间的等可能事件**展开。
+
+18世纪晚期至19世纪，频率学派的概率观开始取代古典定义。Richard von Mises等人将将概率定义为某一事件在大量重复试验中发生的**相对频率**，即
+
+$$
+P(A)=\lim_{n\to\infty}\frac{n_A}{n}
+$$
+
+其中，$n_A$ 是事件 $A$ 发生的次数，$n$ 是试验的总次数。这一方法突破了古典定义在非等可能情境中的局限性，但也面临一些哲学上的争议，特别是在如何定义“**无限次重复**”时遇到了困难。
+
+与频率学派同时期，Bayes提出了基于先验知识更新概率的概念，即贝叶斯定理。贝叶斯学派强调概率是对某一随机现象的**主观信念程度**，主张通过**已知证据**(即已经发生的事件的信息)来更新这一信念：
+
+$$
+P(A\mid B)=\frac{P(A)P(B\mid A)}{P(B)}
+$$
+
+Bayes学派认为概率不一定源自重复试验，而是基于观察归纳和对先验知识的修正。
+
+1900年Hilbert提出要建立概率的公理化定义以解决这个问题，即**以最少的几条本质特性出发去刻画概率的概念**。1933年Kolmogorov首次提出了**基于集合论和测度论**的公理化概率定义，标志着概率论进入现代阶段。这个定义既概括了历史上几种概率定义中的共同特性，又避免了各自的局限性和含混之处。**不管什么随机现象，只有满足该定义中的三条公理，才能说它是概率**。
+
+Kolmogorov的公理化体系使用了集合论的语言，将概率视为对一个集合(样本空间)的子集赋予的**测度**。他提出的三条公理已经形成了现代概率论的基础。
+
+但在这之前，我们必须首先明确哪些集合可以被称为“事件”，并且构造一个包含在样本空间的“事件集合”。直觉上我们所构造的集合应该对事件的各种运算(即余集、交集和并集)封闭，并且样本空间 ${\mit\Omega}$ 本身和它的余集 $\varnothing$ 都应该在这个“事件集合”中。
+
+<div class="definition-box">
+    <div class="definition-title">
+        事件域
+    </div>
+    <div class="definition-content">
+        设 ${\mit\Omega}$ 为一个样本空间，$\mathscr{F}$ 是 ${\mit\Omega}$ 的子集所组成的集合类。若 $\mathscr{F}$ 满足：
+        <ol>
+           <li>${\mit\Omega}\in\mathscr{F}$；</li>
+           <li>若 $A\in\mathscr{F}$，则对立事件 $\bar{A}\in\mathscr{F}$；</li>
+           <li>若 $A_1,A_2,\cdots,A_n,\cdots\in\mathscr{F}$，则可列并 $\bigcup\limits_{i=1}^{\infty}A_i\in\mathscr{F}$。</li>
+        </ol>
+        则称 $\mathscr{F}$ 是一个事件域，或者 $\sigma-\text{域}$ 或者 $\sigma\ -$ 代数。
+    </div>
+</div>
+
+在概率论中，称 $({\mit\Omega},\mathscr{F})$ 为**可测空间**(Measurable space)，**在可测空间上才能定义概率**，这时 $\mathscr{F}$ 上都是有概率可言的事件。
+
+$\sigma\ -$ 代数用于定义哪些集合可以称为“事件”，并确保可以在这些事件上合理地定义和计算概率。通过 $\sigma\ -$ 代数，我们能对各种复杂事件进行**可数次或者有限次运算**(余集、交集和并集)，并确保这些操作后的结果依然是事件，即仍然在 $\sigma\ -$ 代数中。
+
+需要注意的是，在概率论中，$\sigma\ -$ 代数指的就是那些可以定义概率的事件的集合(并且满足余集和可列并封闭)。至于在其他学科中，有其他学科所赋予的内涵；并且由条件(2)可知，$\varnothing\in\mathscr{F}$，并且 $\overline{\bigcup\limits_{i=1}^{\infty}A_i}=\bigcap\limits_{i=1}^{\infty}\bar{A}_i\in\mathscr{F}$。
+
+一维实数轴 $\mathbb{R}$ 上的**Borel集**是常见的 $\sigma\ -$ 代数，它是由一切有界开区间 $(a,b)$，通过至多可数次的(有限或者可数)余集运算、交集运算和并集运算得到的集合。
+
+在实际应用中，$\sigma\ -$ 代数提供了一个框架，它被用于定义一个复杂事件系统，使其可以进行概率分析，这允许我们根据不同的应用场景定义哪些事件是可以赋予概率的。通常一个较大的集合 ${\mit\Omega}$ 可能包含无穷多个子集，而只有 $\sigma\ -$ 代数中的事件才是我们能够赋予概率的“可测事件”。不仅如此，$\sigma\ -$ 代数还为事件提供了一个良好的数学结构，还确保了我们对事件操作的一致性。由于 $\sigma\ -$ 代数对余集和可数并封闭，所以在定义事件的概率时，无论我们是直接计算事件的概率，还是通过余集或并集的方式来间接计算概率，都能够得到一致的结果。
+
+在实际中，那些无法精确测量、描述过于复杂或超出我们观察能力的事件，通常不属于 $\sigma\ -$ 代数，因此我们无法为它们赋予概率。这些事件往往涉及无限小的区间、无穷复杂的现象或超精确的测量，在实际概率分析中无法处理，属于不可测事件。例如一个颜色的RGB值精确为某个特定数值、在无穷多次抛硬币结果中，硬币的正反面组成某个非常特定的无穷序列。
+
+<div class="definition-box">
+    <div class="definition-title">
+        概率的公理化定义
+    </div>
+    <div class="definition-content">
+        设 $\mit\Omega$ 为一个样本空间，$\mathscr{F}$ 为 $\mit\Omega$ 上的事件域，$P(A)$ 为定义在 $\mathscr{F}$ 上的实值函数。若$P(A)$ 满足：
+        <ol>
+           <li>非负性：$\forall A\in\mathscr{F}$，$P(A)\geqslant0$；</li>
+           <li>正则性：$P({\mit\Omega})=1$；</li>
+           <li>
+            可列可加性：$\forall A_1,A_2,\cdots,A_n,\cdots\in\mathscr{F}$，且 $A_1,A_2,\cdots,A_n,\cdots$ 两两互不相容，则
+            
+            $$
+                P\left(\bigcup_{i=1}^{\infty}A_i\right)=\sum_{i=1}^{\infty}P(A_i)
+            $$
+
+           </li>
+        </ol>
+        则称 $P(A)$ 为事件 $A$ 的概率(Probability)。
+    </div>
+</div>
+
+称 $({\mit\Omega},\mathscr{F},P)$ 为**概率空间**(Probability space)，它为研究随机现象提供了一个严谨的数学框架，使我们能够合理地处理、计算和分析各种随机事件的概率。无论是处理简单的随机事件，还是处理复杂的随机变量，都可以在这个框架下进行。
+
+要特别指出的是，概率 $P$ 是事件 $A$ 的实函数，并且概率 $P(A)$ 是有界的，即 $0\leqslant P(A)\leqslant1$。
+
+这一公理化体系与**Lebesgue测度**相结合，使得概率论的基础变得更加坚实，能够处理复杂的事件和连续概率空间问题。Kolmogorov的公理化定义克服了以往各个学派的局限性，使得概率论从经验和直觉的框架走向了严谨的数学体系。
+
+<div class="definition-box">
+    <div class="definition-title">
+        概率的公理化定义
+    </div>
+    <div class="definition-content">
+        在样本空间 ${\mit\Omega}$ 中，若有 $n$ 个事件 $D_1,D_2,\cdots,D_n$，满足：
+        <ol>
+           <li>$D_1,D_2,\cdots,D_n$ 两两互不相容；</li>
+           <li>$\bigcup\limits_{i=1}^{n}D_i={\mit\Omega}$。</li>
+        </ol>
+        则称 $D_1,D_2,\cdots,D_n$ 为样本空间 ${\mit\Omega}$ 的一个分割(Division)。
+    </div>
+</div>
+
+可列个互不相容的事件 $D_1,D_2,\cdots,D_n,\cdots$ 若满足 $\bigcup\limits_{i=1}^{\infty}D_i={\mit\Omega}$，那么 $D_1,D_2,\cdots,D_n,\cdots$ 也可以成为样本空间 ${\mit\Omega}$ 的一个分割。
 
 ### 序贯模型
 
+**序贯模型**(Sequential Models)通常指一类用于处理顺序数据或在数据采集过程中逐步更新模型的统计方法。其核心思想是基于当前数据点以及之前的观测数据，实时或分阶段地更新估计、推断或决策。
+
+序贯模型的应用包括以下几个方面：
+1. 对于涉及时间序列、文本序列等具有时间或顺序依赖的数据，序贯模型用来捕捉这些数据中前后顺序之间的依赖关系。例如时间序列分析、隐马尔可夫模型(Hidden Markov Model)和循环神经网络等(Recurrent neural network)；
+2. 在贝叶斯框架中，序贯模型指在每个时间点或阶段逐步更新模型的参数或预测分布。即随着新数据的到来，不断使用新的证据修正先验信息形成后验，从而改进对未知参数的估计。这种更新是动态的，可以处理逐步到来的数据；
+3. 在统计实验设计中，序贯模型也指根据实验过程中逐步获取的数据来动态调整实验的设计或数据采集过程。这种方法与传统的固定样本大小不同，实验者可以根据中间结果调整样本规模或停止实验。例如序贯假设检验在逐步收集样本的过程中，实时决定是否拒绝或接受假设。
+
+许多试验本身具有序贯的特征。例如连续抛掷一枚硬币连续抛三次，或者连续观察一只股票5天，又或者在一个通信接收设备上接收8位数字。常用**序贯树形图**来刻画样本空间中的试验结果。
+
 ### 概率建模的步骤
+
+概率论可以用来分析现实世界的许多不确定现象，这个过程通常分成两个阶段：
+
+1. 从一个**适当的样本空间**中给出概率分布，从而建立概率模型。在这个阶段没有关于建立模型的一般规则，只要建立的概率分布符合概率公理化即可。可能有些人会怀疑所建立模型的真实性，有时人们宁愿使用“错误”的模型，其理由是“错误”的模型比“正确”的模型简单且易于处理，这种处理问题的态度在科学和工程学中很普遍。因此在实际工作中，选择的模型往往既要**准确、简单**又要兼顾**易操作性**。此外统计学家还依据历史数据和过去相似试验的结果，利用统计方法确定模型，比如贝叶斯统计；
+2. 我们将在完全严格的概率模型之下进行推导，计算某些事件的概率或推导出一些十分有趣的性质，(1)的任务是**建立现实世界与数学的联系**，而(2)则是严格限制在**概率公理之下的逻辑推理**。如果涉及的计算很复杂或概率分布的陈述不简明，推理和理解就会遇到困难，但是所有的问题将会有一个准确的答案不会产生歧义，只要有足够高的能力，所有的困难都将迎刃而解。
 
 ## 概率的性质
 
-### 概率的性质
+### 概率的基本性质
+
+设事件 $A,B$ 属于同一个样本空间 $\mit\Omega$，由概率的公理化定义容易推出概率的以下性质：
+
+1. 不可能事件 $\varnothing$ 的概率为0：即 $P(\varnothing)=0$；
+
+2. 有限可加性：若有 $n$ 个两两互不相容的事件 $A_1,A_2,\cdots,A_n$，则
+
+$$
+P\left(\bigcup_{i=1}^{n}A_i\right)=\sum_{i=1}^{n}P(A_i)
+$$
+
+3. 对立事件的概率：对任意事件 $A$，其对立事件 $\bar{A}$ 的概率为
+
+$$
+P(\bar{A})=1-P(A)
+$$
 
 ### 事件的差的概率
+
+<div class="proposition-box">
+    <div class="proposition-title">
+        命题4
+    </div>
+    <div class="proposition-content">
+        对于任意两个事件 $A$ 与 $B$，其差 $A-B$ 的概率为
+        
+        $$
+            P(A-B)=P(A)-P(AB)
+        $$
+    </div>
+</div>
 
 ### 加法公式
 
