--- a/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
+++ b/_posts/2024-10-05-概率论基础(1)-随机事件与概率.md
@@ -9,7 +9,7 @@ layout: article
 modify_date: '2024-10-05 18:18:00 +0000'
 ---
 
-概率论与数理统计研究的对象是随机现象．概率论是研究随机现象的模型(即概率分布)，数理统计是研究随机现象的数据收集与处理。
+概率论与数理统计研究的对象是随机现象。概率论是研究随机现象的模型(即概率分布)，数理统计是研究随机现象的数据收集与处理。
 
 <!--more-->
 
@@ -28,7 +28,7 @@ modify_date: '2024-10-05 18:18:00 +0000'
       样本空间和样本点
   </div>
   <div class="definition-content">
-    随机现象的一切可能基本结果组成的集合称为样本空间(Sample space)，记为 ${\mit\Omega}=\\{\omega\\}$，其中 $\omega$ 表示基本结果，称为样本点(Sample point)。
+    随机现象的一切可能基本结果组成的集合称为样本空间(Sample space)，记为 ${\mit\Omega}=\{\omega\}$，其中 $\omega$ 表示基本结果，称为样本点(Sample point)。
   </div>
 </div>
 
@@ -98,7 +98,7 @@ $$
 3. 事件 $A$ 与 $B$ 的交：记为 $A\cap B$，或简记为 $AB$。其含义为“由事件 $A$ 与 $B$ 中公共的样本点组成的新事件”，或用概率论的语言说“事件 $A$ 与 $B$ **同时发生**”；
 4. 对立事件(余集)：将事件 $A$ 的对立事件记为 $\bar{A}$，即“由在 $\mit\Omega$ 中而不在 $A$ 中的样本点组成的新事件”，或用概率论的语言说“$A$ 不发生”，即 $\bar{A}={\mit\Omega}-A$。
 
-注意，对立事件是相互的，即 $A$ 的对立事件是 $\bar{A}$，而 $\bar{A}$ 的对立事件是 $A$，即 $\bar{\bar{A}}=A$。**必然事件** ${\mit\Omega}$ **与不可能事件** $\boldsymbol{\varnothing}$ **互为对立事件**，即 $\bar{{\mit\Omega}}=\varnothing$，$\bar{\varnothing}={\mit\Omega}$。
+注意，对立事件是相互的，即 $A$ 的对立事件是 $\bar{A}$，而 $\bar{A}$ 的对立事件是 $A$，即 $\bar{\bar{A}}=A$。**必然事件** ${\mit\Omega}$ **与不可能事件** $\boldsymbol{\varnothing}$ **互为对立事件**，即 $\bar{\mit\Omega}=\varnothing$，$\bar{\varnothing}={\mit\Omega}$。
 
 <div class="proposition-box">
     <div class="proposition-title">
